(master): Fix jumping

--- a/src/less/popover/popover.less
+++ b/src/less/popover/popover.less
@@ -25,9 +25,8 @@
       &:focus + .popover {
         display: block;
         &.popover-right {
-          display: block;
+          display: inherit;
           margin-top: -35px;
-          position: static;
           float: right;
           .left-arrow {
             .arrowWidth();
